<?xml version="1.0"?>
<package format="2">
  <name>global_mapper</name>
  <version>1.1.3</version>
  <description>The global_mapper package</description>

  <maintainer email="jakeware@mit.edu">Jake Ware</maintainer>
  <author>Jake Ware</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>fla_utils</depend>
  <depend>pcl_ros</depend>

  <export>
    <nodelet plugin="${prefix}/global_mapper_nodelet.xml"/>
  </export>
</package>
